# cloudplayer

./: .gitignore
MediaConvert/: Application.cpp  Application.h  CMakeLists.txt  InitException.cpp  InitException.h  InputReader.cpp  InputReader.h  MediaConvert.cpp  MediaConvert.h  MediaConvert.kdev4  main.cpp
MediaIndex/: BlockingQueue.cpp  BlockingQueue.h  CMakeLists.txt  Covers.cpp  Covers.h  Database.cpp  Database.h  DbCoverIterator.cpp  DbCoverIterator.h  DbPathIterator.cpp  DbPathIterator.h  DirScanner.cpp  DirScanner.h  Indexer.cpp  Indexer.h  MediaIndex.cpp  MediaIndex.h  ProgressOutput.cpp  ProgressOutput.h  Stats.cpp  Stats.h  Updater.cpp  Updater.h  main.cpp
MusicMobileApp/: .classpath  .project  pom.xml
MusicServer/: PublicKeyReaderUtil.java  build.properties  build.xml  module_musicserver.xml  musicserver.properties  musicserver.xml  startup.cfg
MusicServer/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
MusicServer/nbproject/configs/: debug_log.properties  default_log.properties
MusicServer/src/: startup.cfg
MusicServer/src/de/pandaserv/music/: shared
MusicServer/src/de/pandaserv/music/server/: CacheFilter.java  CommandLineImporter.java  Main.java  MusicServer.java  MusicService.java
MusicServer/src/de/pandaserv/music/server/cache/: CacheEntry.java  CacheEntryInputStream.java  CacheInputStream.java  CacheManager.java  CacheManager_.java  FileStatus.java  PrepareJob.java  PrepareJob_.java  TranscodeDataJob.java  TranscodeInputStream.java  TranscodeInputStream_.java  TranscodeJob.java
MusicServer/src/de/pandaserv/music/server/data/: Track.java  TrackDetail.java
MusicServer/src/de/pandaserv/music/server/database/: AttributesDatabase.java  CacheDatabase.java  (+9 more)
MusicServer/test/: jobs.html  streamtest.html
MusicTestApp/MusicTest/: pom.xml
MusicTestApp/MusicTest/src/main/webapp/: app.css  index.html
MusicTestApp/MusicTest/src/main/webapp/css/: glisse.css
MusicTestApp/MusicTest/src/main/webapp/js/: glisse.js
MusicWebApp/: .classpath  .project  pom.xml
MusicWebApp/art/: bg.xcf
MusicWebApp/src/de/pandaserv/music/: MusicWebApp.gwt.xml
MusicWebApp/src/de/pandaserv/music/client/: MusicWebApp.java
MusicWebApp/src/main/webapp/: app.css  index.html
MusicWebApp/war/: MusicWebApp.css  MusicWebApp.html
SharedEntities/src/: MusicApp.gwt.xml
SharedEntities/src/shared/: AccessDeniedException.java  Cover.java  DataType.java  Directory.java  FileStatus.java  GwtMusicService.java  GwtMusicServiceAsync.java  Priority.java  QueueMode.java  RangeResponse.java  Track.java  TrackDetail.java  TrackLength.java  UserInfo.java
(+152 files in other folders)
